Update project docs